@@ -608,20 +608,16 @@ sectionTitles <-
       "\\seealso"="See Also", "\\examples"="Examples", "\\value"="Value")
 
 psub <- function(pattern, replacement, x)
-##    gsub(pattern, replacement, x, perl = TRUE, useBytes = TRUE)
-    .Internal(gsub(pattern, replacement, x, FALSE, TRUE, FALSE, TRUE))
+    gsub(pattern, replacement, x, perl = TRUE)
 
 psub1 <- function(pattern, replacement, x)
-##    sub(pattern, replacement, x, perl = TRUE, useBytes = TRUE)
-    .Internal(sub(pattern, replacement, x, FALSE, TRUE, FALSE, TRUE))
+    sub(pattern, replacement, x, perl = TRUE)
 
 fsub <- function(pattern, replacement, x)
-##    gsub(pattern, replacement, x, fixed = TRUE, useBytes = TRUE)
-    .Internal(gsub(pattern, replacement, x, FALSE, FALSE, TRUE, TRUE))
+    gsub(pattern, replacement, x, fixed = TRUE)
 
 fsub1 <- function(pattern, replacement, x)
-##    sub(pattern, replacement, x, fixed = TRUE, useBytes = TRUE)
-    .Internal(sub(pattern, replacement, x, FALSE, FALSE, TRUE, TRUE))
+    sub(pattern, replacement, x, fixed = TRUE)
 
 
 ## for lists of messages, see ../man/checkRd.Rd
